cmd/order-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: order-gateway-traefik-app
    k8s.kuboard.cn/workload: order-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-order-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/order/v1/version
            backend:
              serviceName: order-gateway
              servicePort: 50430
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: order-gateway-traefik-app-user
    k8s.kuboard.cn/workload: order-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-order-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          ######
          # Enable for all users
          ######
          - path: /api/order/v1/create/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
          - path: /api/order/v1/update/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
          - path: /api/order/v1/get
            backend:
              serviceName: order-gateway
              servicePort: 50430
          - path: /api/order/v1/update/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
          ######
          # Only enable for app admin
          ######
          - path: /api/order/v1/create/user/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
          - path: /api/order/v1/create/app/user/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
          - path: /api/order/v1/update/user/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
          - path: /api/order/v1/update/app/user/order
            backend:
              serviceName: order-gateway
              servicePort: 50430
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
